src/App.css
*{
margin:0;
padding:0;
box-sizing:border-box;
}

body{
font-family:'Poppins',sans-serif;
background:#020617;
color:white;
}
html{
scroll-behavior:smooth;
}

/* NAVBAR */

.navbar{
display:flex;
justify-content:space-between;
align-items:center;
padding:22px 10%;
position:sticky;
top:0;
z-index:1000;
background:rgba(2,6,23,0.6);
/* background: radial-gradient(circle at 30% 30%, rgba(255,0,0,0.15), transparent 50%),rgba(2,6,23,0.8); */
/* background:
radial-gradient(circle at 30% 30%, rgba(255,0,0,0.35), transparent 40%),
radial-gradient(circle at 70% 40%, rgba(255,50,50,0.25), transparent 40%),
#020617; */
backdrop-filter:blur(10px);
/* border-bottom:1px solid rgba(255,255,255,0.05); */
border-bottom:1px solid rgba(239,68,68,0.2);
}

.logo{
font-size:20px;
font-weight:600;
/* background:linear-gradient(90deg,#a78bfa,#6366f1); */
background:linear-gradient(90deg,#ffffff,#ef4444);
-webkit-background-clip:text;
color:transparent;
}

.nav-links{
display:flex;
gap:30px;
list-style:none;
}

.nav-links a{
text-decoration:none;
font-size:15px;
/* color:#cbd5f5; */
color:#e5e7eb;
position:relative;
transition:0.3s;
}

.nav-links a:hover{
color:#a78bfa;
}

.nav-links a::after{
content:"";
position:absolute;
left:0;
bottom:-6px;
width:0;
height:2px;
/* background:#8b5cf6; */
background:#ef4444;
transition:0.3s;
}

.nav-links a:hover::after{
width:100%;
}
.nav-links a.active{
/* color:#a78bfa; */
color:#ef4444;
}

.nav-links a.active::after{
width:100%;
}
/* HERO */

.hero{
min-height:90vh;
display:flex;
flex-direction:column;
justify-content:center;
align-items:center;
text-align:center;
position:relative;
/* background:
radial-gradient(circle at 20% 30%, rgba(139,92,246,0.4), transparent 40%),
radial-gradient(circle at 80% 40%, rgba(59,130,246,0.4), transparent 40%),
radial-gradient(circle at 50% 80%, rgba(34,197,94,0.3), transparent 40%),
#020617; */
background:
radial-gradient(circle at 30% 30%, rgba(255,0,0,0.35), transparent 40%),
radial-gradient(circle at 70% 40%, rgba(255,50,50,0.25), transparent 40%),
#020617;
}

.hero::before{
content:"";
position:absolute;
top:0;
left:0;
width:100%;
height:100%;
background-image:
linear-gradient(rgba(255,255,255,0.05) 1px, transparent 1px),
linear-gradient(90deg, rgba(255,255,255,0.05) 1px, transparent 1px);
background-size:40px 40px;
z-index:-1;
}

.hero h1{
font-size:40px;
max-width:90%;
margin: 10px auto;
}

.hero span{
/* color:#38bdf8; */
background:linear-gradient(to right, #fff, #ef4444);
-webkit-background-clip:text;
-webkit-text-fill-color:transparent;

}

.hero h2{
font-size:26px;
margin-top:10px;
background:linear-gradient(to right, #fff, #ef4444);
-webkit-background-clip:text;
-webkit-text-fill-color:transparent;
}

.hero p{
margin-top:10px;
font-size:16px;
}


.hero-buttons{
margin-top: 45px;
display:flex;
gap:15px;
}

.btn{
padding:10px 20px;
/* background:#38bdf8; */
background:#ef4444;

border:none;
border-radius:6px;
cursor:pointer;
}

.btn-outline{
padding:10px 20px;
/* border:1px solid #38bdf8; */
border:1px solid #ef4444;
background:transparent;
color:white;
border-radius:6px;
}
/* ABOUT SECTION */

.about{
min-height:80vh;
display:flex;
justify-content:center;
align-items:center;
text-align:center;
position:relative;
background:
radial-gradient(circle at 20% 30%, rgba(139,92,246,0.4), transparent 40%),
radial-gradient(circle at 80% 40%, rgba(59,130,246,0.4), transparent 40%),
radial-gradient(circle at 50% 80%, rgba(34,197,94,0.3), transparent 40%),
#020617;
}



/* ABOUT SECTION */

.about{
min-height:80vh;
display:flex;
justify-content:center;
align-items:center;
text-align:center;
position:relative;
/* background:
radial-gradient(circle at 20% 30%, rgba(139,92,246,0.4), transparent 40%),
radial-gradient(circle at 80% 40%, rgba(59,130,246,0.4), transparent 40%),
radial-gradient(circle at 50% 80%, rgba(34,197,94,0.3), transparent 40%),
#020617; */
background:
radial-gradient(circle at 30% 30%, rgba(255,0,0,0.35), transparent 40%),
radial-gradient(circle at 70% 40%, rgba(255,50,50,0.25), transparent 40%),
#020617;
}

.about-container{
max-width:750px;
margin:auto;
padding:40px;
}

.about-text{
font-size:18px;
line-height:1.7;
/* color:#cbd5f5; */
color:#e5e7eb;
margin-top:20px;
}

/* SECTIONS */

section{
padding:80px 10%;
text-align: center;
}

.section-title{
font-size:32px;
margin-bottom:40px;
text-align:center;
background:linear-gradient(90deg,#a78bfa,#6366f1);
-webkit-background-clip:text;
color:transparent;
}

/* SKILLS */
/* 
.skills-grid{
display:grid;
grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
gap:20px;
margin-top:20px;
} */
 /* SKILLS SECTION */
.skills{
min-height:100vh;
display:flex;
flex-direction:column;
justify-content:center;
align-items:center;
text-align:center;
position:relative;
padding:60px 20px;

/* RED GLOW BACKGROUND */
background:
radial-gradient(circle at 30% 30%, rgba(255,0,0,0.35), transparent 40%),
radial-gradient(circle at 70% 40%, rgba(255,50,50,0.25), transparent 40%),
#020617;

/* smoother fonts */
-webkit-font-smoothing: antialiased;
-moz-osx-font-smoothing: grayscale;
}

/* TITLE */

.section-title{
font-size:32px;
font-weight:600;
letter-spacing:1px;
margin-bottom:10px;
background:linear-gradient(to right, #fff, #ef4444);
-webkit-background-clip:text;
-webkit-text-fill-color:transparent;
}

/* GRID */

/* .skills-grid{
display:grid;
grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
gap:25px;
width:100%;
max-width:1100px;
margin-top:50px;
} */
 /* SLIDER CONTAINER */
/*  1*/
/* .skills-slider{
width:100%;
overflow:hidden;
margin-top:60px;
} */

/* MOVING TRACK */
/* 2 */
/* .skills-track{
display:flex;
gap:25px;
width:max-content;
animation:scrollSkills 20s linear infinite;
} */

/* PAUSE ON HOVER (like pro sites) */

.skills-slider:hover .skills-track{
animation-play-state:paused;
}

/* ANIMATION KEYFRAMES  3*/

/* @keyframes scrollSkills{
0%{
transform:translateX(0);
}
100%{
transform:translateX(-50%);
}
} */
/* ... */

